--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1943,6 +1943,29 @@ footer ul li a:hover {
   font-style: italic;
 }
 
+.backgroundSpinner {
+  /* display: none; */
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 999;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(203, 223, 211);
+  /* Fallback color */
+  background-color: rgba(221, 233, 223, 0.2);
+  /* Black w/ opacity */
+}
+
 @media screen and (max-width: 991px) {
   .wrapper-form::after {
     left: 0;
