--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1360,6 +1360,7 @@ footer ul li a:hover {
 .box-single-product,
 .box-single-offer {
   max-width: 300px;
+  height: 320px;
   display: inline-block;
   border-top-left-radius: 150px;
   border-bottom-left-radius: 50px;
@@ -1934,8 +1935,25 @@ footer ul li a:hover {
   background-size: cover;
 }
 
+.productModal {
+  position: fixed;
+  z-index: 999;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
 .formHelp {
   color: #e50000;
+  font-style: italic;
+}
+
+.successMessage {
+  color: #6cc57c;
   font-style: italic;
 }
 
@@ -1964,6 +1982,14 @@ footer ul li a:hover {
   /* Fallback color */
   background-color: rgba(221, 233, 223, 0.2);
   /* Black w/ opacity */
+}
+
+.sort {
+  margin-left: -30px;
+}
+
+.first-arrow {
+  margin-right: 5px;
 }
 
 .fade-arrow {
