--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -365,6 +365,27 @@ textarea {
   /* Black w/ opacity */
 }
 
+.modalValidation {
+  position: fixed;
+  /* Stay in place */
+  z-index: 999;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.2);
+  /* Black w/ opacity */
+}
+
 /* Modal Content */
 
 .modal-content {
@@ -2161,4 +2182,19 @@ footer ul li a:hover {
 
 .location-marker {
   color: #6cc57c;
+}
+
+.no-validate {
+  color: #e50000;
+  cursor: pointer;
+}
+
+.validate {
+  color: rgba(49, 169, 93, 1);
+  cursor: pointer;
+}
+
+.user-value {
+  color: rgba(49, 169, 93, 1);
+  line-height: 1.3;
 }
