--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1700,8 +1700,15 @@ footer ul li a:hover {
 .spinner {
   width: 10%;
   height: 300px;
-  margin: 0 auto;
+  margin: 0 45px;
 }
+
+.spinner2 {
+  width: 10%;
+  height: 300px;
+  margin: 0 45%;
+}
+
 
 @media screen and (min-width: 992px) {
   .search-product,
