--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2215,3 +2215,18 @@ footer ul li a:hover {
   color: rgba(49, 169, 93, 1);
   line-height: 1.3;
 }
+
+.subtitle {
+  font-size: 20px;
+  color: #7f8da0;
+  line-height: 1.3;
+  margin-top: 14px;
+  margin-left: 20px;
+}
+
+.subtitle-products {
+  font-size: 20px;
+  color: #7f8da0;
+  line-height: 1.3;
+  margin-top: 14px;
+}
